# action-python-security-auditing-tests

./: .gitignore  .pre-commit-config.yaml  README.md  expected_results.yml  pyproject.toml
.github/scripts/: validate_results.py
.github/workflows/: 01-requirements-flat.yml  02-requirements-src-bandit.yml  03-requirements-multi-both.yml  04-uv-flat.yml  05-uv-src-vuln.yml  06-uv-multi-bandit.yml  07-poetry-flat.yml  08-poetry-src-both.yml  09-pipenv-flat.yml  10-pipenv-multi-bandit.yml  11-requirements-root.yml  12-uv-flat-bandit-only.yml  13-requirements-unfixable.yml  14-uv-low-threshold.yml  ci.yml  integration-tests.yml  update-action-pin.yml
01-requirements-flat/: README.md  app.py  requirements.txt
02-requirements-src-bandit/: README.md  requirements.txt
02-requirements-src-bandit/src/: app.py
03-requirements-multi-both/: README.md  requirements.txt
03-requirements-multi-both/scripts/: run.py
03-requirements-multi-both/src/: processor.py
04-uv-flat/: README.md  app.py  pyproject.toml
05-uv-src-vuln/: README.md  pyproject.toml
05-uv-src-vuln/src/: fetcher.py
06-uv-multi-bandit/: README.md  pyproject.toml
06-uv-multi-bandit/scripts/: digest.py
06-uv-multi-bandit/src/: parser.py
07-poetry-flat/: README.md  app.py  pyproject.toml
08-poetry-src-both/: README.md  pyproject.toml
08-poetry-src-both/src/: auth.py
09-pipenv-flat/: Pipfile  README.md  app.py
10-pipenv-multi-bandit/: Pipfile  README.md
10-pipenv-multi-bandit/scripts/: deploy.py
10-pipenv-multi-bandit/src/: handler.py
11-requirements-root/: README.md  app.py
12-uv-flat-bandit-only/: README.md  app.py  pyproject.toml
13-requirements-unfixable/: README.md  app.py
14-uv-low-threshold/: README.md  app.py  pyproject.toml
tests/: conftest.py  test_validate_results.py
