[tool.poetry]
name = "poetry-flat-clean"
version = "0.1.0"
description = "Clean poetry project for security audit testing"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
httpx = ">=0.27.0"
click = ">=8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
